--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "String", "API_KEY", apiKey
+        buildConfigField "String", "TOKEN", token
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
