--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         versionName "1.0"
 
         buildConfigField "String", "API_KEY", apiKey
-        buildConfigField "String", "TOKEN", token
+        buildConfigField "String", "TOKEN", Token
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
