--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //Picasso
+    implementation "com.squareup.picasso:picasso:2.71828"
+    //Material Design
+    implementation 'com.google.android.material:material:1.1.0'
+    //Dilating dots progressbar
+    implementation 'com.github.justzak:dilatingdotsprogressbar:1.0.1'
+    //SwipeRefresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
 }
